force-app/main/default/objects/SX_Role__c/SX_Role__c.object-meta.xml
<CustomObject>
    <description>Serves as a Salesforce Junction object between Units and Above Units</description>
    <label>SX Role</label>
    <nameField>
        <label>SX Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SX Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>