force-app/main/default/objects/SX_Role__c/fields/Above_Unit__c.field-meta.xml
<CustomField>
    <fullName>Above_Unit__c</fullName>
    <label>Above Unit</label>
    <referenceTo>SX_Above_Unit__c</referenceTo>
    <relationshipLabel>SX Roles</relationshipLabel>
    <relationshipName>SX_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>