force-app/main/default/objects/SX_Role__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <referenceTo>SX_Unit__c</referenceTo>
    <relationshipLabel>SX Roles</relationshipLabel>
    <relationshipName>SX_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>