force-app/main/default/objects/SX_Role__c/fields/Unit_Above_Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit_Above_Unit__c</fullName>
    <externalId>true</externalId>
    <label>Unit Above Unit</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>