force-app/main/default/objects/SX_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Above_Unit__c</columns>
    <columns>Unit_Above_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>